--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,8 @@ categories = ["database-implementations", "command-line-utilities"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 
-[workspace]
 
 [dependencies]
-toboggan-lib = "0.1"
 sled = "0.34.7"
 futures = "0.3.23"
 tarpc = { version = "0.30.0", features = ["tokio1", "serde-transport", "tcp", "serde1", "serde-transport-bincode"] }
@@ -26,8 +24,12 @@ serde = { version = "1.0.144", features = ["derive"] }
 tracing = "0.1.36"
 tracing-subscriber = "0.3.15"
 anyhow = "1.0.63"
+thiserror = "1.0.2"
 
 [dependencies.clap]
 version = "3.2.17"
 features = ["derive"]
+
+
+
 
