--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "toboggan"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
-license-file = "LICENSE"
+license = "MIT"
 readme = "README.md"
 description = "Key/value TCP-based database server and client cli based on the sled embedded database"
 homepage = "https://github.com/mcaveniathor/toboggan"
@@ -23,7 +23,6 @@ tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", ] }
 serde = { version = "1.0.144", features = ["derive"] }
 tracing = "0.1.36"
 tracing-subscriber = "0.3.15"
-anyhow = "1.0.63"
 thiserror = "1.0.2"
 
 [dependencies.clap]
